--- a/index.html
+++ b/index.html
@@ -3,161 +3,129 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Korkunç Quiz: Ferdayı Ne Kadar Tanıyorsun?</title>
+  <title>Ferdayı Ne Kadar Tanıyorsun?</title>
   <style>
     body {
       margin: 0; padding: 0;
-      background: #000;
-      color: #eee;
-      font-family: 'Creepster', Georgia, serif;
-      height: 100vh;
+      background: #111;
+      color: #fff;
+      font-family: Arial, Georgia, sans-serif;
+      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(160deg, #000 60%, #300 100%);
     }
-    @import url('https://fonts.googleapis.com/css2?family=Creepster&display=swap');
     #container {
-      background: rgba(0,0,0,0.92);
-      width: 95vw;
-      max-width: 460px;
-      border-radius: 14px;
-      padding: 24px 18px 22px 18px;
-      box-shadow: 0 0 40px #c40000, 0 0 0 10px #111 inset;
+      background: #181818;
+      width: 94vw;
+      max-width: 410px;
+      border-radius: 12px;
+      padding: 22px 14px 18px 14px;
+      box-shadow: 0 0 22px #a22;
       display: flex;
       flex-direction: column;
-      height: 80vh;
-      border: 2px solid #7e0000;
-      position: relative;
+      min-height: 70vh;
     }
     #intro {
-      font-size: 3.2rem;
+      font-size: 2.5rem;
       text-align: center;
-      color: #d10000;
-      letter-spacing: 2px;
-      font-family: 'Creepster', serif;
-      text-shadow: 0 0 18px #ff2222, 0 0 6px #fff;
-      margin-top: 10vh;
+      color: #ff4444;
+      margin-bottom: 32px;
       opacity: 1;
-      transition: opacity 1.1s ease;
-      animation: flicker 1s alternate infinite;
-    }
-    @keyframes flicker {
-      0% {opacity: 1;}
-      45% {opacity: 0.85;}
-      50% {opacity: 0.7;}
-      60% {opacity: 0.92;}
-      100% {opacity: 1;}
+      transition: opacity 1s;
+      font-family: inherit;
     }
     #chat {
       flex: 1;
       overflow-y: auto;
-      padding-right: 10px;
       display: none;
       flex-direction: column;
     }
     .message {
-      max-width: 80%;
-      margin: 14px 0;
-      padding: 16px 22px;
-      border-radius: 33px;
-      font-size: 1.1rem;
+      max-width: 90%;
+      margin: 10px 0;
+      padding: 11px 16px;
+      border-radius: 18px;
+      font-size: 1.08rem;
       line-height: 1.4;
-      animation: fadeIn 0.5s ease forwards;
+      animation: fadeIn 0.3s ease forwards;
       opacity: 0;
-      box-shadow: 0 0 12px #b80000;
+      background: #222;
+      color: #fff;
     }
     .bot {
-      background: #2b0707;
       align-self: flex-start;
       border-top-left-radius: 0;
+      border: 1px solid #ff4444;
+      background: #201010;
       color: #ff4444;
-      font-family: 'Creepster', Georgia, serif;
-      letter-spacing: 1px;
-      text-shadow: 0 0 6px #ff4444, 0 0 2px #fff;
     }
     .user {
-      background: #600808;
       align-self: flex-end;
       border-top-right-radius: 0;
+      border: 1px solid #444;
+      background: #282828;
       color: #fff;
-      font-family: Georgia, serif;
     }
-    #options {
-      margin-top: auto;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 13px;
-      justify-content: center;
+    #question-area {
+      margin: 22px 0 14px 0;
+      text-align: center;
+      font-size: 1.3rem;
+      color: #fff;
+      font-weight: bold;
+      min-height: 40px;
+      letter-spacing: 0.5px;
       display: none;
     }
+    #options {
+      display: none;
+      flex-wrap: wrap;
+      gap: 11px;
+      justify-content: center;
+    }
     #options button {
-      background: rgba(0,0,0,0.7);
-      border: 2px solid #c40000;
+      background: #181818;
+      border: 2px solid #ff4444;
       color: #ff4444;
-      font-size: 1.1rem;
-      padding: 10px 22px;
-      border-radius: 20px;
+      font-size: 1rem;
+      padding: 8px 18px;
+      border-radius: 16px;
       cursor: pointer;
-      transition: background 0.25s, color 0.25s;
+      transition: background 0.2s, color 0.2s;
+      margin-bottom: 7px;
       font-family: inherit;
-      box-shadow: 0 0 10px #c40000;
-      margin-bottom: 10px;
     }
     #options button:hover {
       background: #ff4444;
-      color: #000;
+      color: #181818;
       border-color: #fff;
-      box-shadow: 0 0 18px #fff, 0 0 8px #ff4444;
       font-weight: bold;
     }
     #result {
       display: none;
-      font-size: 2.2rem;
+      font-size: 1.7rem;
       text-align: center;
-      margin-top: 32px;
+      margin-top: 22px;
       color: #ff4444;
-      text-shadow: 0 0 12px #fff;
-      font-family: 'Creepster', serif;
+      font-family: inherit;
     }
-    .scary-face {
-      font-size: 4.5rem;
-      text-align: center;
-      filter: blur(1px);
-      margin-bottom: 14px;
-      color: #ff2222;
-      opacity: 0.7;
-      animation: shake 0.4s infinite alternate;
-      user-select: none;
+    @keyframes fadeIn {
+      to { opacity: 1; }
     }
-    @keyframes shake {
-      0% { transform: translate(1px, 1px) rotate(0deg);}
-      20% { transform: translate(-1px, 2px) rotate(-1deg);}
-      40% { transform: translate(-3px, 1px) rotate(1deg);}
-      60% { transform: translate(3px, 1px) rotate(0deg);}
-      80% { transform: translate(1px, -1px) rotate(1deg);}
-      100% { transform: translate(-1px, 2px) rotate(-1deg);}
-    }
-    ::selection {
-      background: #ff4444;
-      color: #000;
-    }
-    /* Scrollbar */
+    ::selection { background: #ff4444; color: #fff; }
     ::-webkit-scrollbar { width: 7px; }
-    ::-webkit-scrollbar-thumb { background: #4d0000; border-radius: 8px; }
+    ::-webkit-scrollbar-thumb { background: #3d1313; border-radius: 8px; }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="container">
   <div id="intro">Merhaba</div>
+  <div id="question-area"></div>
   <div id="chat"></div>
   <div id="options"></div>
   <div id="result"></div>
 </div>
-<audio id="scary-audio" src="https://cdn.pixabay.com/audio/2022/10/16/audio_12e1e9e7a6.mp3"></audio>
 <script>
-  // Soru havuzu (örnektir, kendin düzenleyebilirsin)
   const questions = [
     {q: "En sevdiğim renk hangisi?", a: "Siyah", options: ["Kırmızı", "Mavi", "Yeşil", "Siyah"]},
     {q: "En sevdiğim yemek nedir?", a: "Antrikot", options: ["Tavuk", "Balık", "Kebap", "Antrikot"]},
@@ -181,44 +149,36 @@
     {q: "Hangisi benim ilgimi çeker?", a: "Hacker kültürü", options: ["Moda", "Bahçıvanlık", "Hacker kültürü", "Seramik"]}
   ];
 
-  // DOM elemanları
   const introDiv = document.getElementById('intro');
   const chatDiv = document.getElementById('chat');
   const optionsDiv = document.getElementById('options');
   const resultDiv = document.getElementById('result');
-  const scaryAudio = document.getElementById('scary-audio');
+  const questionArea = document.getElementById('question-area');
 
-  let currentIntro = 0;
   let currentQuestion = 0;
   let score = 0;
   const userAnswers = [];
 
-  function scaryFace() {
-    return `<div class="scary-face">( ͡° ͜ʖ ͡°) <br>👁️👄👁️</div>`;
-  }
-
-  function fadeOut(element, duration = 1000) {
+  function fadeOut(element, duration = 900) {
     element.style.transition = `opacity ${duration}ms`;
     element.style.opacity = 0;
     return new Promise(resolve => setTimeout(resolve, duration));
   }
-  function fadeIn(element, duration = 1000) {
+  function fadeIn(element, duration = 900) {
     element.style.transition = `opacity ${duration}ms`;
     element.style.opacity = 1;
     return new Promise(resolve => setTimeout(resolve, duration));
   }
 
   async function showIntro() {
-    introDiv.innerHTML = scaryFace() + "Merhaba";
+    introDiv.innerHTML = "Merhaba";
     introDiv.style.opacity = 1;
     await fadeIn(introDiv);
-    scaryAudio.volume = 0.2;
-    scaryAudio.play();
-    await new Promise(r => setTimeout(r, 1800));
+    await new Promise(r => setTimeout(r, 1300));
     await fadeOut(introDiv);
     introDiv.innerHTML = "Hazır mısın?";
     await fadeIn(introDiv);
-    await new Promise(r => setTimeout(r, 700));
+    await new Promise(r => setTimeout(r, 500));
     optionsDiv.innerHTML = '';
     optionsDiv.style.display = 'flex';
     const yesBtn = document.createElement('button');
@@ -227,11 +187,10 @@
       optionsDiv.style.display = 'none';
       await fadeOut(introDiv);
       introDiv.style.display = 'none';
-      scaryAudio.pause();
-      scaryAudio.currentTime = 0;
       chatDiv.style.display = 'flex';
-      showBotMessage("O zaman başlayalım...");
-      setTimeout(showQuestion, 1100);
+      questionArea.style.display = 'block';
+      showBotMessage("Başlıyoruz...");
+      setTimeout(showQuestion, 900);
     };
     optionsDiv.appendChild(yesBtn);
   }
@@ -239,10 +198,11 @@
   function showBotMessage(text) {
     const msg = document.createElement('div');
     msg.classList.add('message', 'bot');
-    msg.innerHTML = text;
+    msg.textContent = text;
     chatDiv.appendChild(msg);
     chatDiv.scrollTop = chatDiv.scrollHeight;
   }
+
   function showUserMessage(text) {
     const msg = document.createElement('div');
     msg.classList.add('message', 'user');
@@ -257,7 +217,8 @@
       return;
     }
     const q = questions[currentQuestion];
-    showBotMessage(`<b>${currentQuestion + 1}. ${q.q}</b>`);
+    questionArea.style.display = "block";
+    questionArea.textContent = `${currentQuestion + 1}. ${q.q}`;
     optionsDiv.innerHTML = '';
     optionsDiv.style.display = 'flex';
 
@@ -271,21 +232,23 @@
         currentQuestion++;
         optionsDiv.innerHTML = '';
         optionsDiv.style.display = 'none';
-        setTimeout(showQuestion, 800);
+        questionArea.textContent = "";
+        setTimeout(showQuestion, 700);
       };
       optionsDiv.appendChild(btn);
     });
   }
 
   function endQuiz() {
+    questionArea.style.display = "none";
     showBotMessage("Test tamamlandı. Sonucun hazırlanıyor...");
     setTimeout(() => {
       resultDiv.style.display = 'block';
-      resultDiv.innerHTML = scaryFace() + `<br>Puanın: <span style="color:#fff;">${score}/100</span>`;
-    }, 1500);
+      resultDiv.innerHTML = `<br>Puanın: <span style="color:#fff;">${score}/100</span>`;
+    }, 1200);
 
-    // Mail gönder
-    fetch("https://formspree.io/f/xqkrwwze", { // Formspree kodunu buradan al: https://formspree.io/
+    // Mail gönder (Formspree örneği, kendi endpoint'inle değiştir)
+    fetch("https://formspree.io/f/xqkrwwze", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
